--- a/src/Redmask.Taghelpers/wwwroot/fileman/lang/fa.json
+++ b/src/Redmask.Taghelpers/wwwroot/fileman/lang/fa.json
@@ -8,15 +8,15 @@
 "DeleteFile":"Delete",
 "SelectFile":"Select",
 "OrderBy":"Order by",
-"Name_asc":"&uarr;&nbsp;&nbsp;Name",
-"Size_asc":"&uarr;&nbsp;&nbsp;Size",
-"Date_asc":"&uarr;&nbsp;&nbsp;Date",
-"Name_desc":"&darr;&nbsp;&nbsp;Name",
-"Size_desc":"&darr;&nbsp;&nbsp;Size",
-"Date_desc":"&darr;&nbsp;&nbsp;Date",
-"Name":"Name",
-"Size":"Size",
-"Date":"Date",
+"Name_asc":"&uarr;&nbsp;&nbsp;نام",
+"Size_asc":"&uarr;&nbsp;&nbsp;سایز",
+"Date_asc":"&uarr;&nbsp;&nbsp;تاریخ",
+"Name_desc":"&darr;&nbsp;&nbsp;نام",
+"Size_desc":"&darr;&nbsp;&nbsp;سایز",
+"Date_desc":"&darr;&nbsp;&nbsp;تاریخ",
+"Name":"نام",
+"Size":"سایز",
+"Date":"تاریخ",
 "Dimensions":"Dimensions",
 "Cancel":"Cancel",
 "LoadingDirectories":"Loading folders...",
