--- a/src/Redmask.Taghelpers/wwwroot/fileman/lang/fa.json
+++ b/src/Redmask.Taghelpers/wwwroot/fileman/lang/fa.json
@@ -2,12 +2,12 @@
 "CreateDir":"ایحاد",
 "RenameDir":"تغییر نام",
 "DeleteDir":"حذف",
-"AddFile":"Add file",
-"Preview":"Preview",
-"RenameFile":"Rename",
-"DeleteFile":"Delete",
-"SelectFile":"Select",
-"OrderBy":"Order by",
+"AddFile":"افزودن فایل",
+"Preview":"پیش نمایش",
+"RenameFile":"تغییر نام",
+"DeleteFile":"حذف",
+"SelectFile":"انتخاب",
+"OrderBy":"مرتب سازی",
 "Name_asc":"&uarr;&nbsp;&nbsp;نام",
 "Size_asc":"&uarr;&nbsp;&nbsp;سایز",
 "Date_asc":"&uarr;&nbsp;&nbsp;تاریخ",
@@ -18,12 +18,12 @@
 "Size":"سایز",
 "Date":"تاریخ",
 "Dimensions":"Dimensions",
-"Cancel":"Cancel",
+"Cancel":"بی خیال",
 "LoadingDirectories":"Loading folders...",
 "LoadingFiles":"Loading files...",
 "DirIsEmpty":"This folder is empty",
 "NoFilesFound":"No files found",
-"Upload":"Upload",
+"Upload":"آپلود",
 "T_CreateDir":"Create new folder",
 "T_RenameDir":"Rename folder",
 "T_DeleteDir":"Delete selected folder",
@@ -65,17 +65,17 @@
 "E_UploadNoFiles":"There are no files to upload or file is too big.",
 "E_UploadInvalidPath":"Cannot upload files - path doesn't exist",
 "E_FileExtensionForbidden":"This type of files cannot be handeled - invalid extension ",
-"DownloadFile":"Download",
-"T_DownloadFile":"Download file",
+"DownloadFile":"دانلود",
+"T_DownloadFile":"دانلود فایل",
 "E_CannotDeleteRoot":"Cannot delete root folder",
-"file":"file",
-"files":"files",
-"Cut":"Cut",
-"Copy":"Copy",
+"file":"فایل",
+"files":"فایلها",
+"Cut":"کات",
+"Copy":"کپی",
 "Paste":"Paste",
 "E_CopyFile":"Error copying file",
 "E_CopyFileInvalisPath":"Cannot copy file - path doesn't exist",
 "E_CopyDirInvalidPath":"Cannot copy directory - path doesn't exist",
 "E_CreateArchive":"Error creating zip archive.",
-"E_UploadingFile":"error"
+"E_UploadingFile":"ارور"
 }
